Fixed nav bar covering content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
 html {
   background-color: #dcdeda;
   position: relative;
+  scroll-padding-top: 120px;
 }
 html::before {
   content: "";
@@ -15,11 +16,26 @@ html::before {
   background-repeat: no-repeat;
   background-attachment: fixed;
   opacity: 60%;
+  z-index: -1;
 }
 #headerContent {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   align-items: center;
+  margin: 1em;
+}
+#subHeader {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  width: 500px;
+  margin: 0px 200px 0px 0px;
+  text-align: center;
+}
+#intro {
+  margin: 0px 0px 40px 0px;
+  font-family: "Arvo", serif;
+  font-size: large;
 }
 
 body {
@@ -105,3 +121,33 @@ nav ul li {
   cursor: pointer;
   margin: 0px 0px 0px 6em;
 }
+
+button {
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 1;
+  border-radius: 500px;
+  transition-property: background-color, border-color, color, box-shadow, filter;
+  transition-duration: 0.3s;
+  border: 1px solid transparent;
+  letter-spacing: 2px;
+  min-width: 160px;
+  text-transform: uppercase;
+  white-space: normal;
+  font-weight: 700;
+  text-align: center;
+  padding: 16px 14px 18px;
+  color: #616467;
+  box-shadow: inset 0 0 0 2px #616467;
+  background-color: transparent;
+  height: 48px;
+}
+button:hover {
+  color: #fff;
+  background-color: #616467;
+}
+/*#projectButton {
+  margin: 0px 400px 0px 0px;
+}*/
